--- a/style Amazon clone.css
+++ b/style Amazon clone.css
@@ -6,7 +6,7 @@
 .navbar{
     height: 70px;
     background-color: #0f1111;
-    color: rgb(213, 77, 77);
+    color: white;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
