--- a/style Amazon clone.css
+++ b/style Amazon clone.css
@@ -176,17 +176,43 @@ span {
     
 }
 
-.box1_box{
-    background-image: url(hero3.jpg); /* Double-check this path! */
-    height: 300px;
-    /* --- ADD THESE PROPERTIES --- */
-    background-size: cover;   /* This makes the image fit without stretching */
-    background-position: center; /* This centers the image in the container */
-   
-}
+
+
 .border-content{
     margin-top: 15px;
 }
 .border-content p{
     color: #007185;
+}
+
+.box1_box{
+    background-image: url(hero3.jpg);
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+}
+
+.box2_box{
+    background-image: url(hero4.jpg);
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+}
+
+.box3_box{
+    background-image: url(hero5.jpg);
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+}
+
+.box4_box{
+    background-image: url(heroimage.jpg);
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+}
+
+.border-content{
+    margin-top: 15px;
 }
