--- a/style Amazon clone.css
+++ b/style Amazon clone.css
@@ -172,10 +172,15 @@ span {
     background-color: white;
     padding: 20px 15px 15px; /* Added padding for content inside the box */
     margin-top: 15px;
-    border: 2px solid black;
+    
     
 }
-
+.box-img{
+    height: 300px;
+    background-size:contain;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 
 
 .border-content{
@@ -185,34 +190,5 @@ span {
     color: #007185;
 }
 
-.box1_box{
-    background-image: url(hero3.jpg);
-    height: 300px;
-    background-size: cover;
-    background-position: center;
-}
 
-.box2_box{
-    background-image: url(hero4.jpg);
-    height: 300px;
-    background-size: cover;
-    background-position: center;
-}
 
-.box3_box{
-    background-image: url(hero5.jpg);
-    height: 300px;
-    background-size: cover;
-    background-position: center;
-}
-
-.box4_box{
-    background-image: url(heroimage.jpg);
-    height: 300px;
-    background-size: cover;
-    background-position: center;
-}
-
-.border-content{
-    margin-top: 15px;
-}
